:tada: add tow logs

--- a/packages/client/locales/en/calls.json
+++ b/packages/client/locales/en/calls.json
@@ -1,6 +1,7 @@
 {
   "Calls": {
     "tow": "Tow",
+    "towLogs": "Tow Logs",
     "taxi": "Taxi",
     "active911Calls": "Active 911 Calls",
     "noTowCalls": "There are no tow calls yet.",
