:tada: progress LEO incidents (#71)

--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -78,6 +78,14 @@
     "plate": "Plate",
     "location": "Location",
     "model": "Model",
+    "incidents": "Incidents",
+    "createIncident": "Create Incident",
+    "caseNumber": "Case Number",
+    "firearmsInvolved": "Firearm(s) Involved",
+    "injuriesOrFatalities": "Injuries or Fatalities",
+    "arrestsMade": "Arrest(s) Made",
+    "involvedOfficers": "Involved Officers",
+    "noIncidents": "There are no incidents yet.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
     "alert_allowCheckout": "Are you sure you to checkout this vehicle from the impound lot?"
