:tada: minor improvements closes #115 closes #117 closes #116

--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -27,7 +27,9 @@
     "events": "Events",
     "name": "Name",
     "categories": "Categories",
-    "continue": "Continue"
+    "continue": "Continue",
+    "yes": "Yes",
+    "no": "No"
   },
   "Errors": {
     "unknown": "An unexpected error occurred",
