:hammer: improve UI of licensesCard & modal (closes #122)

--- a/packages/client/locales/en/citizen.json
+++ b/packages/client/locales/en/citizen.json
@@ -28,7 +28,7 @@
     "weaponLicense": "Firearms License",
     "phoneNumber": "Phone Number",
     "pilotLicense": "Pilot License",
-    "pilotLicenseCategory": "Drivers License Categories",
+    "pilotLicenseCategory": "Pilot License Categories",
     "ccw": "CCW",
     "createTaxiCall": "Create Taxi Call",
     "create911Call": "Create 911 Call",
