:hammer: add more translations

--- a/packages/client/locales/en/calls.json
+++ b/packages/client/locales/en/calls.json
@@ -18,6 +18,7 @@
     "editTaxiCall": "Edit taxi call",
     "assignedUnits": "Assigned Units",
     "selectCitizen": "Select citizen",
+    "citizen": "Citizen",
     "endCall": "End Call",
     "end911Call": "End 911 Call",
     "addEvent": "Add Event",
