--- a/packages/client/locales/en/ems-fd.json
+++ b/packages/client/locales/en/ems-fd.json
@@ -14,6 +14,7 @@
     "noDeputies": "You do not have any deputies",
     "noActiveDeputies": "There are no active deputies",
     "citizenNoMedicalRecords": "This citizen doesn't have any medical records.",
+    "activeDeputy": "Active Deputy",
     "alert_deleteDeputy": "Are you sure you want to delete <span>{deputy}</span>? This action cannot be undone."
   }
 }
