--- a/packages/client/locales/en/business.json
+++ b/packages/client/locales/en/business.json
@@ -31,6 +31,8 @@
     "pendingEmployees": "Pending Employees",
     "noPendingEmployees": "There are no employees pending access.",
     "businessIsWhitelisted": "This business is whitelisted. You will be able to view it once you're accepted.",
+    "postTitle": "Post Title",
+    "postBody": "Post Body",
     "alert_fireEmployee": "Are you sure you want to fire <span>{employee}</span>? This action cannot be undone.",
     "alert_deletePost": "Are you sure you want to delete this post? This action cannot be undone.",
     "alert_deleteBusiness": "Are you sure you want to delete \"<span>{business}</span>\"? This action cannot be undone."
