--- a/packages/client/locales/en/citizen.json
+++ b/packages/client/locales/en/citizen.json
@@ -47,6 +47,7 @@
     "noVehicles": "You do not have any vehicles registered yet.",
     "deleteVehicle": "Delete Vehicle",
     "reportAsStolen": "Report as stolen",
+    "registeredVehicles": "Registered Vehicles",
     "alert_deleteVehicle": "Are you sure you want to delete this vehicle? This action cannot be undone."
   },
   "Weapons": {
@@ -57,6 +58,7 @@
     "addWeapon": "Add Weapon",
     "noWeapons": "You do not have any weapons registered yet.",
     "deleteWeapon": "Delete Weapon",
+    "registeredWeapons": "Registered Weapons",
     "alert_deleteWeapon": "Are you sure you want to delete this weapon? This action cannot be undone."
   },
   "MedicalRecords": {
