--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -31,6 +31,7 @@
     "notepad": "Notepad",
     "plateSearch": "Plate Search",
     "weaponSearch": "Weapon Search",
+    "activeOfficer": "Active officer",
     "activeOfficers": "Active Officers",
     "updateAOP": "Update Area of Play",
     "utilityPanel": "Utility Panel",
@@ -88,6 +89,8 @@
     "involvedOfficers": "Involved Officers",
     "noIncidents": "There are no incidents yet.",
     "deleteIncident": "Delete Incident",
+    "toggleRecords": "Toggle Records",
+    "toggleVehiclesWeapons": "Toggle vehicles and weapons",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
     "alert_allowCheckout": "Are you sure you to checkout this vehicle from the impound lot?",
