--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -91,6 +91,8 @@
     "deleteIncident": "Delete Incident",
     "toggleRecords": "Toggle Records",
     "toggleVehiclesWeapons": "Toggle vehicles and weapons",
+    "unmerge": "Unmerge",
+    "merge": "Merge",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
     "alert_allowCheckout": "Are you sure you to checkout this vehicle from the impound lot?",
