--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -56,6 +56,7 @@
     "officerIsCombined": "This officer is marked as combined unit and cannot be used individually right now.",
     "officerAlreadyMerged": "This unit is already marked as a combined unit.",
     "discordNameInUse": "Could not create a new account with Discord since the username is already in-use.",
-    "discordAccountAlreadyLinked": "This Discord account is already linked to another account."
+    "discordAccountAlreadyLinked": "This Discord account is already linked to another account.",
+    "cannotRegisterFirstWithDiscord": "The first account must be registered without Discord. You can link Discord once the account is created."
   }
 }
