:hammer: add missing translation keys

--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -33,6 +33,32 @@
     "stopRoleplay": "Stop Roleplay",
     "roleplayStopped": "Admins issued all players to stop all roleplay."
   },
+  "Nav": {
+    "citizen": "Citizen",
+    "citizens": "Citizens",
+    "bleeter": "Bleeter",
+    "taxi": "Taxi",
+    "business": "Business",
+    "truckLogs": "Truck Logs",
+    "admin": "Admin",
+    "dispatch": "Dispatch",
+    "liveMap": "Live Map",
+    "officer": "Officer",
+    "dashboard": "Dashboard",
+    "myOfficers": "My Officers",
+    "myOfficerLogs": "My Officer Logs",
+    "incidents": "Incidents",
+    "impoundLot": "Impound Lot",
+    "manageUnits": "Manage Units",
+    "tow": "Tow",
+    "towLogs": "Tow Logs",
+    "emsFd": "EMS/FD",
+    "myDeputies": "My Deputies",
+    "account": "Account",
+    "logout": "Logout",
+    "login": "Login",
+    "register": "Register"
+  },
   "Errors": {
     "unknown": "An unexpected error occurred",
     "userNotFound": "That user was not found.",
