--- a/packages/client/locales/en/values.json
+++ b/packages/client/locales/en/values.json
@@ -2,6 +2,11 @@
   "Values": {
     "totalItems": "Total Items",
     "values": "Values",
+    "shouldDo": "Should Do",
+    "color": "Color",
+    "callsign": "Callsign",
+    "department": "Department",
+    "gameHash": "Game Hash",
     "alert_deleteValue": "Are you sure you want to delete <span>{value}</span>? This action cannot be undone!"
   },
   "GENDER": {
