--- a/packages/client/locales/en/values.json
+++ b/packages/client/locales/en/values.json
@@ -9,6 +9,7 @@
     "gameHash": "Game Hash",
     "file": "file",
     "importValues": "Import via file",
+    "exportValues": "Export Values",
     "alert_deleteValue": "Are you sure you want to delete <span>{value}</span>? This action cannot be undone!"
   },
   "GENDER": {
