:tada: feat: implement jail func.

--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -51,6 +51,7 @@
     "incidents": "Incidents",
     "impoundLot": "Impound Lot",
     "manageUnits": "Manage Units",
+    "jail": "Jail",
     "tow": "Tow",
     "towLogs": "Tow Logs",
     "emsFd": "EMS/FD",
