--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -94,6 +94,19 @@
     "unmerge": "Unmerge",
     "merge": "Merge",
     "suspended": "Suspended",
+    "jailTime": "Jail Time",
+    "arrested": "Arrested",
+    "timeOut": "Time Out",
+    "jail": "Jail",
+    "release": "Release",
+    "noImprisonedCitizens": "There are no citizens arrested.",
+    "bailPostedBy": "Bail Posted by",
+    "noPenalCodesSelected": "No penal codes selected yet.",
+    "penalCode": "Penal Code",
+    "total": "Total",
+    "fines": "Fines",
+    "bail": "Bail",
+    "releaseCitizen": "You are about to release this citizen. Please select the reason why they are getting released.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
     "alert_allowCheckout": "Are you sure you to checkout this vehicle from the impound lot?",
