--- a/packages/client/locales/en/values.json
+++ b/packages/client/locales/en/values.json
@@ -10,6 +10,9 @@
     "file": "file",
     "importValues": "Import via file",
     "exportValues": "Export Values",
+    "addPenalCodeGroup": "Add Group",
+    "deleteGroup": "Delete Group",
+    "alert_deletePenalCodeGroup": "Are you sure you want to delete <span>{group}</span>? This action cannot be undone.",
     "alert_deleteValue": "Are you sure you want to delete <span>{value}</span>? This action cannot be undone!"
   },
   "GENDER": {
