--- a/packages/client/locales/en/values.json
+++ b/packages/client/locales/en/values.json
@@ -12,6 +12,7 @@
     "exportValues": "Export Values",
     "addPenalCodeGroup": "Add Group",
     "deleteGroup": "Delete Group",
+    "ungrouped": "Ungrouped",
     "alert_deletePenalCodeGroup": "Are you sure you want to delete <span>{group}</span>? This action cannot be undone.",
     "alert_deleteValue": "Are you sure you want to delete <span>{value}</span>? This action cannot be undone!"
   },
