--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -22,6 +22,7 @@
     "accept": "Accept",
     "decline": "Decline",
     "createdAt": "Created At",
+    "updatedAt": "Updated At",
     "reset": "Reset",
     "search": "Search",
     "events": "Events",
