--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -108,6 +108,8 @@
     "bail": "Bail",
     "editLicenses": "Edit Licenses",
     "callHistory": "Call History",
+    "linkToIncident": "Link to incident",
+    "caseNumbers": "Case Number(s)",
     "releaseCitizen": "You are about to release this citizen. Please select the reason why they are getting released.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
