--- a/packages/client/locales/en/admin.json
+++ b/packages/client/locales/en/admin.json
@@ -20,6 +20,7 @@
     "giveTempPassword": "Give Temporary Password",
     "continue": "Yes, continue.",
     "reGenerateToken": "Re-generate Token",
+    "inBolo": "In BOLO",
     "alert_deleteBusiness": "Are you sure you want to delete this <span>{name}</span>? All it's data will be lost. This action cannot be undone."
   }
 }
