--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -111,11 +111,16 @@
     "showBlips": "Show Blips",
     "citizenLogs": "Citizen Logs",
     "noLogs": "There are no logs yet.",
+    "revoke": "Revoke",
+    "warrants": "Warrants",
+    "noWarrants": "This citizen does not have any warrants",
+    "revokeWarrant": "Revoke Warrant",
     "releaseCitizen": "You are about to release this citizen. Please select the reason why they are getting released.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
     "alert_allowCheckout": "Are you sure you to checkout this vehicle from the impound lot?",
-    "alert_deleteIncident": "Are you sure you want to delete this incident? This action cannot be undone."
+    "alert_deleteIncident": "Are you sure you want to delete this incident? This action cannot be undone.",
+    "alert_revokeWarrant": "Are you sure you want to revoke this warrant? This action cannot be undone."
   },
   "Bolos": {
     "activeBolos": "Active Bolos",
