🎉 feat: 911 call history (#227)

--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -64,6 +64,7 @@
     "logout": "Logout",
     "login": "Login",
     "register": "Register",
+    "callHistory": "Call History",
     "citizenLogs": "Citizen Logs"
   },
   "Errors": {
