--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -107,6 +107,9 @@
     "fines": "Fines",
     "bail": "Bail",
     "editLicenses": "Edit Licenses",
+    "callHistory": "Call History",
+    "linkToIncident": "Link to incident",
+    "caseNumbers": "Case Number(s)",
     "hideBlips": "Hide Blips",
     "showBlips": "Show Blips",
     "citizenLogs": "Citizen Logs",
