:tada: feat: courthouse

--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -65,7 +65,8 @@
     "login": "Login",
     "register": "Register",
     "callHistory": "Call History",
-    "citizenLogs": "Citizen Logs"
+    "citizenLogs": "Citizen Logs",
+    "courthouse": "Courthouse"
   },
   "Errors": {
     "unknown": "An unexpected error occurred",
