:hammer: minor changes

--- a/packages/client/locales/en/courthouse.json
+++ b/packages/client/locales/en/courthouse.json
@@ -2,6 +2,7 @@
   "Courthouse": {
     "courthouse": "San Andreas Court",
     "requestExpungement": "Request Expungement",
+    "noExpungementRequests": "You do not have any expungement requests",
     "request": "Request",
     "warrants": "Warrants",
     "arrestReports": "Arrest Reports",
