--- a/packages/client/locales/en/admin.json
+++ b/packages/client/locales/en/admin.json
@@ -5,6 +5,7 @@
     "MANAGE_BUSINESSES": "Manage Businesses",
     "MANAGE_USERS": "Manage Users",
     "MANAGE_UNITS": "Manage Units",
+    "MANAGE_EXPUNGEMENT_REQUESTS": "Manage Expungement Requests",
     "MANAGE_CAD_SETTINGS": "CAD Settings",
     "allUsers": "All Users",
     "pendingUsers": "Pending Users",
