--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -119,6 +119,7 @@
     "noWarrants": "This citizen does not have any warrants",
     "revokeWarrant": "Revoke Warrant",
     "releaseCitizen": "You are about to release this citizen. Please select the reason why they are getting released.",
+    "reportedStolen": "Reported Stolen",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
     "alert_allowCheckout": "Are you sure you to checkout this vehicle from the impound lot?",
