:tada: feat: occupation

--- a/packages/client/locales/en/citizen.json
+++ b/packages/client/locales/en/citizen.json
@@ -33,6 +33,8 @@
     "createTaxiCall": "Create Taxi Call",
     "create911Call": "Create 911 Call",
     "socialSecurityNumber": "Social Security Number",
+    "occupation": "Occupation",
+    "manageOccupation": "Manage Occupation",
     "alert_deleteCitizen": "Are you sure you want to delete <span>{citizen}</span>? This action cannot be undone."
   },
   "Vehicles": {
