--- a/packages/client/locales/en/admin.json
+++ b/packages/client/locales/en/admin.json
@@ -22,6 +22,9 @@
     "continue": "Yes, continue.",
     "reGenerateToken": "Re-generate Token",
     "inBolo": "In BOLO",
+    "pendingBusinesses": "Pending Businesses",
+    "status": "Status",
+    "info_pendingBusinesses": "These are created businesses that are awaiting approval to be used. Accept or decline them.",
     "alert_deleteBusiness": "Are you sure you want to delete this <span>{name}</span>? All it's data will be lost. This action cannot be undone."
   }
 }
