:tada: feat: allow updating officer with multiple divisions

--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -21,7 +21,7 @@
     "postal": "Postal",
     "notes": "Notes",
     "violations": "Violations",
-    "division": "Division",
+    "division": "Division(s)",
     "createTicket": "Create Ticket",
     "createArrestReport": "Create Arrest Report",
     "createWrittenWarning": "Create Written Warning",
