--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -99,6 +99,7 @@
     "unitSuspended": "This unit is suspended. Please contact your supervisor.",
     "recordOrWarrantAlreadyLinked": "A record or a warrant has already been requested. PLease remove the already requested record/warrant.",
     "businessIsPending": "This business is still awaiting approval to be used. Try again later",
-    "businessCreatedButPending": "The business has been created successfully but is still awaiting approval to be used. It must be approved by an administrator."
+    "businessCreatedButPending": "The business has been created successfully but is still awaiting approval to be used. It must be approved by an administrator.",
+    "maxDivisionsReached": "This officer reached the maximum limit of divisions per officer."
   }
 }
