:tada: feat: add postal to more locations

--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -36,7 +36,8 @@
     "optionalField": "Optional",
     "title": "Title",
     "image": "Image",
-    "imgur": "Imgur URL"
+    "imgur": "Imgur URL",
+    "postal": "Postal"
   },
   "Nav": {
     "citizen": "Citizen",
