:tada: show bussiness on plate search

--- a/packages/client/locales/en/citizen.json
+++ b/packages/client/locales/en/citizen.json
@@ -45,6 +45,7 @@
     "color": "Color",
     "plate": "Plate",
     "vinNumber": "VIN Number",
+    "business": "Business",
     "yourVehicles": "Your Vehicles",
     "addVehicle": "Add Vehicle",
     "noVehicles": "You do not have any vehicles registered yet.",
