--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -106,6 +106,7 @@
     "maxLimitOfficersPerUserReached": "This user reached the maximum limit of officers.",
     "maxCitizensPerUserReached": "This user reached the maximum limit of citizens.",
 
+    "NOT_FOUND": "The requested item or page was not found. Please try refreshing the page or try again later.",
     "Network Error": "Could not reach the API due to a network error. Make sure that the API is online and that you are connected to the internet."
   }
 }
