--- a/packages/client/locales/en/admin.json
+++ b/packages/client/locales/en/admin.json
@@ -29,6 +29,9 @@
     "whitelisted": "Whitelisted",
     "declineOfficer": "Decline Officer",
     "action": "Action",
+    "noPendingOfficers": "There are no officers pending access to a department.",
+    "allUnits": "All Units",
+    "departmentWhitelisting": "Department Whitelisting ({length})",
     "info_pendingBusinesses": "These are created businesses that are awaiting approval to be used. Accept or decline them.",
     "alert_deleteBusiness": "Are you sure you want to delete this <span>{name}</span>? All it's data will be lost. This action cannot be undone."
   }
