:tada: feat: progress on 2FA

--- a/packages/client/locales/en/auth.json
+++ b/packages/client/locales/en/auth.json
@@ -12,6 +12,7 @@
     "hide": "hide",
     "registrationCode": "Registration Code",
     "changePassword": "Change Password",
+    "totpCode": "2FA Code",
     "savePasswordInfo": "Make sure to securely save your new password so this doesn't happen again!"
   }
 }
