:hammer: minor fixes

--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -106,6 +106,7 @@
     "maxLimitOfficersPerUserReached": "This user reached the maximum limit of officers.",
     "maxCitizensPerUserReached": "This user reached the maximum limit of citizens.",
     "discordIdInUse": "This discord ID is already connected to a different account.",
+    "totpCodeRequired": "Please enter your 2FA code",
 
     "Error": "An unexpected error occurred. Please report this issue to an administrator or try again later.",
     "NOT_FOUND": "The requested item or page was not found. Please try refreshing the page or try again later.",
