:tada: feat: working 2FA

--- a/packages/client/locales/en/auth.json
+++ b/packages/client/locales/en/auth.json
@@ -13,6 +13,8 @@
     "registrationCode": "Registration Code",
     "changePassword": "Change Password",
     "totpCode": "2FA Code",
+    "enable2FA": "Enable 2FA",
+    "disable2FA": "Disable 2FA",
     "savePasswordInfo": "Make sure to securely save your new password so this doesn't happen again!"
   }
 }
