--- a/packages/client/locales/en/account.json
+++ b/packages/client/locales/en/account.json
@@ -13,7 +13,13 @@
     "disconnecting": "Disconnecting...",
     "currentPassword": "Current password",
     "newPassword": "New password",
-    "confirmNewPassword": "Confirm new password"
+    "2fa": "Two Factor Authentication",
+    "confirmNewPassword": "Confirm new password",
+    "scanQRCode": "Scan this QR code to add it to your authenticator app",
+    "verifyCode": " Verify by entering a code from your authenticator app",
+    "disable": "Disable",
+    "next": "Next",
+    "verify": "Verify"
   },
   "Notifications": {
     "CITIZEN_DELETED": "<span>{citizen}</span> was deleted. Reason: {reason}"
