--- a/packages/client/locales/en/calls.json
+++ b/packages/client/locales/en/calls.json
@@ -31,6 +31,8 @@
     "noEvents": "This call does not have any events",
     "deliveryAddress": "Delivery Address",
     "callTow": "Call Tow",
+    "departments": "Departments",
+    "divisions": "Divisions",
     "alert_deleteCallEvent": "Are you sure you want to delete this event? This action cannot be undone.",
     "alert_end911Call": "Are you sure you want to end this call?",
     "alert_endTowCall": "Are you sure you want to end this call?"
