--- a/packages/client/locales/en/calls.json
+++ b/packages/client/locales/en/calls.json
@@ -34,6 +34,10 @@
     "departments": "Departments",
     "divisions": "Divisions",
     "callFilters": "Call Filters",
+    "purge": "Purge",
+    "purgeSelected": "Purge selected",
+    "purgeSelectedCalls": "Purge selected calls",
+    "alert_purgeSelectedCalls": "Are you sure you want to purge {length} item(s)? This will delete {length} item(s) from the database. This action cannot be undone.",
     "alert_deleteCallEvent": "Are you sure you want to delete this event? This action cannot be undone.",
     "alert_end911Call": "Are you sure you want to end this call?",
     "alert_endTowCall": "Are you sure you want to end this call?"
