:tada: feat: able to import regitered vehicles/weapons

--- a/packages/client/locales/en/admin.json
+++ b/packages/client/locales/en/admin.json
@@ -8,6 +8,9 @@
     "MANAGE_UNITS": "Manage Units",
     "MANAGE_EXPUNGEMENT_REQUESTS": "Manage Expungement Requests",
     "MANAGE_CAD_SETTINGS": "CAD Settings",
+    "IMPORT_CITIZENS": "Import Citizens",
+    "IMPORT_VEHICLES": "Import Vehicles",
+    "IMPORT_WEAPONS": "Import Weapons",
     "allUsers": "All Users",
     "pendingUsers": "Pending Users",
     "viewInfo": "View Info",
