:tada: feat: improved 2FA login flow

--- a/packages/client/locales/en/auth.json
+++ b/packages/client/locales/en/auth.json
@@ -13,6 +13,7 @@
     "registrationCode": "Registration Code",
     "changePassword": "Change Password",
     "totpCode": "2FA Code",
+    "twoFactorCode": "Two Factor Code",
     "savePasswordInfo": "Make sure to securely save your new password so this doesn't happen again!"
   }
 }
