--- a/packages/client/locales/en/values.json
+++ b/packages/client/locales/en/values.json
@@ -16,8 +16,10 @@
     "licenseType": "License Type",
     "whitelisted": "Whitelisted",
     "isDefaultDepartment": "Default Department",
+    "deleteSelectedValues": "Delete Selected Values",
     "alert_deletePenalCodeGroup": "Are you sure you want to delete <span>{group}</span>? This action cannot be undone.",
-    "alert_deleteValue": "Are you sure you want to delete <span>{value}</span>? This action cannot be undone!"
+    "alert_deleteValue": "Are you sure you want to delete <span>{value}</span>? This action cannot be undone!",
+    "alert_deleteSelectedValues": "Are you sure you want to delete {length} items? This action cannot be undone"
   },
   "GENDER": {
     "MANAGE": "Manage Genders",
