--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -125,6 +125,13 @@
     "editTicket": "Edit Ticket",
     "editArrestReport": "Edit Arrest Report",
     "editWrittenWarning": "Edit Written Warning",
+    "quantity": "Quantity",
+    "illegal": "Illegal",
+    "add": "Add",
+    "noSeizedItems": "No seized items yet.",
+    "editSeizedItem": "Edit Seized Item",
+    "addSeizedItem": "Add Seized Item",
+    "seizedItems": "Seized Items",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
     "alert_allowCheckout": "Are you sure you to checkout this vehicle from the impound lot?",
