--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -111,6 +111,6 @@
     "Error": "An unexpected error occurred. Please report this issue to an administrator or try again later.",
     "NOT_FOUND": "The requested item or page was not found. Please try refreshing the page or try again later.",
     "Network Error": "Could not reach the API due to a network error. Make sure that the API is online and that you are connected to the internet.",
-    "mustSetBotTokenGuildId": "This feature cannot be used because there was no `BOT_TOKEN` or `GUILD_ID` present. Please read how to enable Discord Roles: https://cad-docs.netlify.app/other/discord-roles"
+    "mustSetBotTokenGuildId": "This feature cannot be used because there was no `BOT_TOKEN` or `GUILD_ID` present. Please read how to enable Discord Roles: https://cad-docs.caspertheghost.me/docs/discord-integration/discord-roles"
   }
 }
