--- a/packages/client/locales/en/auth.json
+++ b/packages/client/locales/en/auth.json
@@ -14,6 +14,8 @@
     "changePassword": "Change Password",
     "totpCode": "2FA Code",
     "twoFactorCode": "Two Factor Code",
-    "savePasswordInfo": "Make sure to securely save your new password so this doesn't happen again!"
+    "savePasswordInfo": "Make sure to securely save your new password so this doesn't happen again!",
+    "loginViaDiscord": "Login via Discord",
+    "continueAs": "Continue as {username}"
   }
 }
