:tada: feat: add back support for what pages in 10-codes

--- a/packages/client/locales/en/values.json
+++ b/packages/client/locales/en/values.json
@@ -15,6 +15,7 @@
     "ungrouped": "Ungrouped",
     "licenseType": "License Type",
     "whitelisted": "Whitelisted",
+    "whatPages": "What Pages",
     "isDefaultDepartment": "Default Department",
     "deleteSelectedValues": "Delete Selected Values",
     "alert_deletePenalCodeGroup": "Are you sure you want to delete <span>{group}</span>? This action cannot be undone.",
