:hammer: chore:  refactor

--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -38,7 +38,7 @@
     "image": "Image",
     "imgur": "Imgur URL",
     "postal": "Postal",
-    "viewDescription": "View Description",
+    "viewDescription": "View description",
     "citizen": "Citizen"
   },
   "Nav": {
