--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -112,6 +112,7 @@
     "NOT_FOUND": "The requested item or page was not found. Please try refreshing the page or try again later.",
     "Network Error": "Could not reach the API due to a network error. Make sure that the API is online and that you are connected to the internet.",
     "mustSetBotTokenGuildId": "This feature cannot be used because there was no `BOT_TOKEN` or `GUILD_ID` present. Please read how to enable Discord Roles: https://cad-docs.caspertheghost.me/docs/discord-integration/discord-roles",
-    "maxDepartmentsReachedPerUser": "You've reached the max set of units with this department. Please choose a different department or try again later."
+    "maxDepartmentsReachedPerUser": "You've reached the max set of units with this department. Please choose a different department or try again later.",
+    "allowRegularLoginIsDisabled": "Regular login is disabled. Please use Discord OAuth instead"
   }
 }
