--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -113,6 +113,7 @@
     "Network Error": "Could not reach the API due to a network error. Make sure that the API is online and that you are connected to the internet.",
     "mustSetBotTokenGuildId": "This feature cannot be used because there was no `BOT_TOKEN` or `GUILD_ID` present. Please read how to enable Discord Roles: https://cad-docs.caspertheghost.me/docs/discord-integration/discord-roles",
     "maxDepartmentsReachedPerUser": "You've reached the max set of units with this department. Please choose a different department or try again later.",
-    "allowRegularLoginIsDisabled": "Regular login is disabled. Please use Discord OAuth instead"
+    "allowRegularLoginIsDisabled": "Regular login is disabled. Please use Discord OAuth instead",
+    "Invalid Permissions": "You don't have permissions to access this API Route."
   }
 }
