--- a/packages/client/locales/en/business.json
+++ b/packages/client/locales/en/business.json
@@ -31,10 +31,14 @@
     "pendingEmployees": "Pending Employees",
     "businessVehicles": "Business Vehicles",
     "noPendingEmployees": "There are no employees pending access.",
+    "noVehicles": "This business has no vehicles registered.",
     "businessIsWhitelisted": "This business is whitelisted. You will be able to view it once you're accepted.",
     "businessWhitelistedCAD": "This business is still awaiting approval of an administrator.",
     "postTitle": "Post Title",
     "postBody": "Post Body",
+    "nameDescription": "The name of your business.",
+    "addressDescription": "The address of your business.",
+    "whitelistDescription": "Citizens that want to join your business must be reviewed. They can be accepted or denied.",
     "alert_fireEmployee": "Are you sure you want to fire <span>{employee}</span>? This action cannot be undone.",
     "alert_deletePost": "Are you sure you want to delete this post? This action cannot be undone.",
     "alert_deleteBusiness": "Are you sure you want to delete \"<span>{business}</span>\"? This action cannot be undone."
