--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -135,6 +135,7 @@
     "callsignPreview": "Callsign preview",
     "activeIncidents": "Active Incidents",
     "noActiveIncidents": "There are no active incidents",
+    "incident": "Incident",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
     "alert_allowCheckout": "Are you sure you to checkout this vehicle from the impound lot?",
