:hammer: chore: rename stuff + minor fixes

--- a/packages/client/locales/en/common.json
+++ b/packages/client/locales/en/common.json
@@ -39,8 +39,7 @@
     "imgur": "Imgur URL",
     "postal": "Postal",
     "viewDescription": "View description",
-    "citizen": "Citizen",
-    "dismiss": "Dismiss"
+    "citizen": "Citizen"
   },
   "Nav": {
     "citizen": "Citizen",
