--- a/packages/client/locales/en/leo.json
+++ b/packages/client/locales/en/leo.json
@@ -133,6 +133,12 @@
     "addSeizedItem": "Add Seized Item",
     "seizedItems": "Seized Items",
     "callsignPreview": "Callsign preview",
+    "activeIncidents": "Active Incidents",
+    "noActiveIncidents": "There are no active incidents",
+    "incident": "Incident",
+    "endIncident": "End Incident",
+    "end": "End",
+    "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
     "alert_allowCheckout": "Are you sure you to checkout this vehicle from the impound lot?",
