:hammer: chore: minor language file update

--- a/packages/client/locales/en_gb/common.json
+++ b/packages/client/locales/en_gb/common.json
@@ -62,7 +62,7 @@
     "tow": "Tow",
     "towLogs": "Tow Logs",
     "emsFd": "Emergency Services",
-    "myDeputies": "My Service Members",
+    "myDeputies": "My Members",
     "account": "Account",
     "logout": "Logout",
     "login": "Login",
