--- a/packages/client/locales/en_gb/leo.json
+++ b/packages/client/locales/en_gb/leo.json
@@ -36,7 +36,7 @@
     "updateAOP": "Update Area of Play",
     "utilityPanel": "Utility Panel",
     "noActiveOfficers": "There are no active officers",
-    "badgeNumber": "Badge Number",
+    "badgeNumber": "Collar Number",
     "areaOfPlay": "Area of Play",
     "plateOrVin": "Enter VIN or registration",
     "serialNumber": "Enter Serial Number",
